@@ -7,7 +7,6 @@ import android.content.Context;
 import android.content.SyncResult;
 import android.os.Bundle;
 
-import com.annimon.stream.Stream;
 
 import org.signal.contacts.SystemContactsRepository;
 import org.signal.core.util.logging.Log;
@@ -70,11 +69,10 @@ public class ContactsSyncAdapter extends AbstractThreadedSyncAdapter {
         Log.w(TAG, e);
       }
     } else if (unknownSystemE164s.size() > 0) {
-      List<Recipient> recipients = Stream.of(unknownSystemE164s)
-                                         .filter(s -> s.startsWith("+"))
-                                         .map(s -> Recipient.external(s))
-                                         .filter(it -> it != null)
-                                         .toList();
+      List<Recipient> recipients = unknownSystemE164s.stream()
+                                                     .filter(s -> s.startsWith("+"))
+                                                     .map(s -> Recipient.external(s))
+                                                     .filter(it -> it != null).collect(Collectors.toList());
 
       Log.i(TAG, "There are " + unknownSystemE164s.size() + " unknown E164s, which are now " + recipients.size() + " recipients. Only syncing these specific contacts.");
 
