@@ -6,8 +6,7 @@ import android.net.Uri;
 import androidx.annotation.NonNull;
 import androidx.annotation.Nullable;
 
-import com.annimon.stream.IntPair;
-import com.annimon.stream.Stream;
+import java.util.stream.Collectors;
 
 import org.signal.core.util.logging.Log;
 import org.thoughtcrime.securesms.components.emoji.EmojiPageModel;
@@ -35,6 +34,8 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
 import java.util.concurrent.TimeUnit;
+import java.util.stream.IntStream;
+import java.util.stream.Stream;
 
 /**
  * Downloads Emoji JSON and Images to local persistent storage.
@@ -126,10 +127,9 @@ public class DownloadLatestEmojiDataJob extends BaseJob {
       EmojiData    emojiData          = downloadJson(context, targetVersion);
       List<String> supportedDensities = emojiData.getDensities();
       String       format             = emojiData.getFormat();
-      List<String> imagePaths         = Stream.of(emojiData.getDataPages())
-                                              .map(EmojiPageModel::getSpriteUri)
-                                              .map(Uri::getLastPathSegment)
-                                              .toList();
+      List<String> imagePaths         = emojiData.getDataPages().stream()
+                                                 .map(EmojiPageModel::getSpriteUri)
+                                                 .map(Uri::getLastPathSegment).collect(Collectors.toList());
 
       String density = resolveDensity(supportedDensities, targetVersion.getDensity());
       targetVersion = new EmojiFiles.Version(targetVersion.getVersion(), targetVersion.getUuid(), density);
@@ -215,20 +215,20 @@ public class DownloadLatestEmojiDataJob extends BaseJob {
       }
     }
 
-    return Stream.of(allDensities)
-                 .indexed()
+    return IntStream.range(0, allDensities.size())
+                    .boxed()
                  .sorted((lhs, rhs) -> {
-                   int lhsDistance = Math.abs(desiredIndex - lhs.getFirst());
-                   int rhsDistance = Math.abs(desiredIndex - rhs.getFirst());
+                   int lhsDistance = Math.abs(desiredIndex - lhs);
+                   int rhsDistance = Math.abs(desiredIndex - rhs);
 
                    int comp = Integer.compare(lhsDistance, rhsDistance);
                    if (comp == 0) {
-                     return Integer.compare(lhs.getFirst(), rhs.getFirst());
+                     return Integer.compare(lhs, rhs);
                    } else {
                      return comp;
                    }
                  })
-                 .map(IntPair::getSecond)
+                    .map(allDensities::get)
                  .filter(supportedDensities::contains)
                  .findFirst()
                  .orElseThrow(() -> new IllegalStateException("No density available."));
@@ -346,8 +346,8 @@ public class DownloadLatestEmojiDataJob extends BaseJob {
 
     Stream.of(files)
           .filter(File::isDirectory)
-          .filterNot(file -> file.getName().equals(currentDirectoryName))
-          .filterNot(file -> file.getName().equals(newVersionDirectoryName))
+          .filter(file -> !file.getName().equals(currentDirectoryName))
+          .filter(file -> !file.getName().equals(newVersionDirectoryName))
           .forEach(FileUtils::deleteDirectory);
 
     EmojiPageCache.INSTANCE.clear();
