@@ -3,7 +3,8 @@ package org.thoughtcrime.securesms.jobs;
 import androidx.annotation.NonNull;
 import androidx.annotation.Nullable;
 
-import com.annimon.stream.Stream;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 import com.fasterxml.jackson.annotation.JsonProperty;
 
 import org.signal.core.util.ListUtil;
@@ -171,8 +172,7 @@ public class MultiDeviceReadUpdateJob extends BaseJob {
                                           throw new AssertionError(e);
                                         }
                                       })
-                                      .map(id -> new SyncMessageId(RecipientId.from(id.recipientId), id.timestamp))
-                                      .toList();
+                                      .map(id -> new SyncMessageId(RecipientId.from(id.recipientId), id.timestamp)).collect(Collectors.toList());
 
       return new MultiDeviceReadUpdateJob(parameters, ids);
     }
