@@ -10,7 +10,7 @@ import androidx.lifecycle.MutableLiveData;
 import androidx.lifecycle.ViewModel;
 import androidx.lifecycle.ViewModelProvider;
 
-import com.annimon.stream.Stream;
+import java.util.stream.Collectors;
 
 import org.thoughtcrime.securesms.groups.GroupId;
 import org.thoughtcrime.securesms.groups.LiveGroup;
@@ -86,14 +86,13 @@ public class ReviewCardViewModel extends ViewModel {
 
   @WorkerThread
   private @NonNull List<ReviewCard> transformReviewRecipients(boolean isSelfGroupAdmin, @NonNull List<ReviewRecipient> reviewRecipients) {
-    return Stream.of(reviewRecipients)
-                 .filter(r -> repository.loadGroupsInCommonCount(r) > 0)
-                 .map(r -> new ReviewCard(r,
+    return reviewRecipients.stream()
+                           .filter(r -> repository.loadGroupsInCommonCount(r) > 0)
+                           .map(r -> new ReviewCard(r,
                                           repository.loadGroupsInCommonCount(r) - (isGroupThread ? 1 : 0),
                                           getCardType(r),
                                           getPrimaryAction(r, isSelfGroupAdmin),
-                                          getSecondaryAction(r)))
-                 .toList();
+                                          getSecondaryAction(r))).collect(Collectors.toList());
 
   }
 
